--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,14 @@ img{
     text-align: right;
 }
 
+.float-left{
+    float: left;
+}
+.container{
+    width: 1100px;
+    margin: auto;
+}
+
 /* header */
 
 header{
@@ -41,10 +49,7 @@ header{
     height: 80px;
     
 }
-.container{
-    width: 1200px;
-    margin: auto;
-}
+
 .container.top{
     height: 80px;
 }
@@ -58,6 +63,7 @@ header{
 #logo{
     line-height: 80px;
     vertical-align: middle;
+    height: 30px;
 }
 
 .col.w-25{
@@ -94,7 +100,7 @@ header{
     font-size: 15px;
 }
 
-/* jumotron */
+/* jumbotron */
 
 .jumbotron{
     height: 500px;
@@ -113,7 +119,7 @@ header{
     transform: translate(-50%, -50%);
 }
 
-.jumbotron h2{
+.jumbotron h1{
     text-align: center;
     font-size: 50px;
     margin-bottom: 40px;
@@ -150,4 +156,28 @@ header{
     text-decoration: none;
 }
 
+/* main */
 
+.img-rana{
+    width: 65%;
+    vertical-align: middle;
+}
+
+.testo-rana{
+    width: 35%;
+    margin-top: 35px;
+}
+.testo-rana h2{
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+.testo-rana p{
+    line-height: 25px;
+}
+
+.first-content{
+    position: relative;
+    top: 100px;
+}
+
+/* footer */
