--- a/css/style.css
+++ b/css/style.css
@@ -40,12 +40,13 @@ img{
     text-align: center;
 }
 
+
 /* header */
 
 header{
     height: 80px;
-    background-color: #3864e4
-    ;
+    background-color: #3864e4;
+    line-height: 80px;
 }
 
 .main-menu{
@@ -58,15 +59,14 @@ header{
 }
 
 
-.col{
+header .col{
     height: 80px;
     float: left;
 }
 
-#logo{
+#logo img{
     line-height: 80px;
     vertical-align: middle;
-    height: 30px;
 }
 
 .col.w-25{
@@ -161,9 +161,6 @@ header{
 
 /* main */
 
-.container.clearfix{
-    height: 700px;
-}
 
 .img-w-65{
     width: 65%;
@@ -185,6 +182,7 @@ header{
 .section-content{
     position: relative;
     top: 100px;
+    padding: 150px 0;
 }
 .testo-content{
     margin-top: 35px;
@@ -205,7 +203,7 @@ header{
     background-position: center;
     background-repeat: no-repeat;
 }
-.last-link{
+main .link{
     display: inline;
     padding: 15px 20px;
     border-radius: 30px;
@@ -219,5 +217,97 @@ header{
 /* footer */
 
 footer{
-    position: relative;
+    background-color: rgba(35,39,42,255);
+    color: white;
+    height: 600px;
+    margin-top: 85px;
+}
+
+.row{
+    padding-top: 85px;
+    margin-bottom: 35px;
+}
+
+footer .col.w-30{
+    width: 30%;
+    float: left;
+    padding-right: 150px
+}
+
+footer .col.w-30 h4{
+    color: rgba(120,144,229,255);
+    font-size: 25px;
+    margin-bottom: 25px;
+}
+
+footer .col.w-30 figure{
+    width: 20px;
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+footer .col.w-30 .icon{
+    margin: 10px 8px;
+}
+
+
+footer .col.w-70{
+    width: 70%;
+    float: left;
+}
+
+footer .col.w-25{
+    width: 25%;
+    float: left;
+}
+
+footer .col.w-25 h5{
+    color: rgba(120,144,229,255);
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+
+footer .col.w-25 li{
+    line-height: 25px;
+    list-style: none;
+}
+
+/* last div */
+
+.last-div{
+    height: 80px;
+    line-height: 80px;
+}
+
+.last-div .col.left{
+    width: 50%;
+    float: left;
+}
+
+.last-div .col.right{
+    text-align: right;
+    width: 50%;
+    float: left;
+}
+
+footer .logo{
+    display: inline-block;
+
+}
+
+.col.left figure img{
+ vertical-align: middle;
+}
+
+footer a{
+    text-align: right;
+    vertical-align: middle;
+    display: inline;
+    padding: 10px 15px;
+    border-radius: 30px;
+    background-color: rgba(142,161,225,255);
+    margin: 0 20px;
+    font-size: 14px;
+    color: white;
+    text-decoration: none;
 }
